tests/neg/parser-stability-26.scala
// Test that function types ending in SIP-23 singleton types are understood correctly.
class E extends (Int => 1) // error
